[gd_scene load_steps=10 format=3 uid="uid://mnbnrm08xdfg"]

[ext_resource type="FontFile" uid="uid://c6eto2yrtv7nj" path="res://fonts/m5x7.ttf" id="1_x1aop"]
[ext_resource type="Script" path="res://scripts/user_interface/combat_display.gd" id="1_ysjhe"]
[ext_resource type="Texture2D" uid="uid://cnbe7gu2mvw74" path="res://graphics/user_interface/big_hp_bar_bg.png" id="2_73bab"]
[ext_resource type="Texture2D" uid="uid://c2cda0eughsht" path="res://graphics/user_interface/big_box_top.png" id="2_citn0"]
[ext_resource type="Texture2D" uid="uid://c8fcvma2oj5op" path="res://graphics/user_interface/big_hp_bar_over.png" id="3_fi4is"]
[ext_resource type="Texture2D" uid="uid://b8kle4cdcyfbu" path="res://graphics/user_interface/big_box_bottom.png" id="3_tc4qp"]
[ext_resource type="Texture2D" uid="uid://bvoisgm5tdx0c" path="res://graphics/user_interface/big_hp_bar_progress.png" id="4_eajq7"]
[ext_resource type="Texture2D" uid="uid://mwn8dxbkimuf" path="res://graphics/user_interface/attr_box_top.png" id="8_uamgu"]
[ext_resource type="Texture2D" uid="uid://y5svo37brwvo" path="res://graphics/user_interface/attr_box_bottom.png" id="9_4av2q"]

[node name="CombatDisplay" type="CanvasLayer"]
script = ExtResource("1_ysjhe")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
scale = Vector2(3.5, 3.5)
pivot_offset = Vector2(-80, 60)

[node name="BigBox" type="Node2D" parent="Control"]

[node name="Top" type="Sprite2D" parent="Control/BigBox"]
texture = ExtResource("2_citn0")

[node name="Bottom" type="Sprite2D" parent="Control/BigBox"]
texture = ExtResource("3_tc4qp")

[node name="UnitName" type="Label" parent="Control/BigBox"]
self_modulate = Color(0, 0, 0, 1)
offset_left = -42.8
offset_top = -14.8
offset_right = 44.2
offset_bottom = -0.799973
theme_override_fonts/font = ExtResource("1_x1aop")
theme_override_font_sizes/font_size = 16
text = "Endrick"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HealthBar" type="TextureProgressBar" parent="Control/BigBox"]
offset_left = -42.6
offset_top = 3.20003
offset_right = 44.4
offset_bottom = 11.2
value = 100.0
texture_under = ExtResource("2_73bab")
texture_over = ExtResource("3_fi4is")
texture_progress = ExtResource("4_eajq7")
texture_progress_offset = Vector2(5, 2)

[node name="AttributeBox" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = -87.6
offset_top = -10.4
offset_right = -46.6
offset_bottom = 32.6
theme_override_constants/separation = 0
alignment = 1

[node name="DMGBox" type="VBoxContainer" parent="Control/AttributeBox"]
layout_mode = 2

[node name="Top" type="Sprite2D" parent="Control/AttributeBox/DMGBox"]
position = Vector2(31.6, 37.2001)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_uamgu")

[node name="Bottom" type="Sprite2D" parent="Control/AttributeBox/DMGBox"]
position = Vector2(31.6, 37.2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_4av2q")

[node name="HITBox" type="VBoxContainer" parent="Control/AttributeBox"]
layout_mode = 2

[node name="Top" type="Sprite2D" parent="Control/AttributeBox/HITBox"]
position = Vector2(68, 37.2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_uamgu")

[node name="Bottom" type="Sprite2D" parent="Control/AttributeBox/HITBox"]
position = Vector2(68, 37.2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_4av2q")

[node name="CRITBox" type="VBoxContainer" parent="Control/AttributeBox"]
layout_mode = 2

[node name="Top" type="Sprite2D" parent="Control/AttributeBox/CRITBox"]
position = Vector2(104.4, 37.2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_uamgu")

[node name="Bottom" type="Sprite2D" parent="Control/AttributeBox/CRITBox"]
position = Vector2(104.4, 37.2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_4av2q")

[node name="DMGText" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.6, 0.6)

[node name="DMGLabel" type="Label" parent="Control/DMGText"]
layout_mode = 0
offset_left = -70.0
offset_top = 32.0
offset_right = -50.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_x1aop")
text = "DMG"

[node name="DMGCount" type="Label" parent="Control/DMGText"]
layout_mode = 0
offset_left = -66.0
offset_top = 44.0
offset_right = -54.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_x1aop")
text = "99
"

[node name="HITText" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.6, 0.6)

[node name="HITLabel" type="Label" parent="Control/HITText"]
layout_mode = 0
offset_left = -8.0
offset_top = 32.0
offset_right = 12.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_x1aop")
text = "HIT"

[node name="HITCount" type="Label" parent="Control/HITText"]
layout_mode = 0
offset_left = -6.00001
offset_top = 44.0
offset_right = 5.99999
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_x1aop")
theme_override_font_sizes/font_size = 16
text = "99
"

[node name="CRITText" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.6, 0.6)

[node name="CRITLabel" type="Label" parent="Control/CRITText"]
layout_mode = 0
offset_left = 49.3333
offset_top = 32.0
offset_right = 73.3333
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_x1aop")
theme_override_font_sizes/font_size = 16
text = "CRIT"

[node name="CRITCount" type="Label" parent="Control/CRITText"]
layout_mode = 0
offset_left = 56.0
offset_top = 44.0
offset_right = 68.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_x1aop")
theme_override_font_sizes/font_size = 16
text = "99
"
